added br to index on week 2

--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -38,7 +38,7 @@
 
         <label for="movies">Pick Your Favorite Movie:</label><br>
         <input type="radio" name="movie" value="Star Wars">
-        <label for="Star Wars">Star Wars</label><br>
+        <label for="Star Wars">Star Wars</label><br><br>
 
         <input type="radio" name="movie" value="Star Trek">
         <label for="Star Trek">Star Trek</label><br>
