Need another break for visual effect

--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -36,7 +36,7 @@
         <button type="submit" class="btn btn-primary" name="button">Submit!</button>
         </div>
 
-        <label for="movies">Pick Your Favorite Movie:</label><br>
+        <label for="movies">Pick Your Favorite Movie:</label><br><br>
         <input type="radio" name="movie" value="Star Wars">
         <label for="Star Wars">Star Wars</label><br><br>
 
